Add Community model, create api to get all communities, add populating db with communities in flask command, test functionality, todo: get community surrounding given coordinates
